<resources>
    <string name="app_name">Tukang</string>
    <string name="ktp">KTP</string>
    <string name="kk">Kartu Keluarga</string>
    <string name="kis">KIS / BPJS</string>
    <string name="sim">SIM</string>
    <string name="welcome">Selamat Datang</string>
    <string name="greeting">Dengan teknologi NFC \nsistem administrasi menjadi \nlebih mudah dan efisien.</string>
    <string name="perintah">Tempelkan\ne-KTP Anda</string>
    <string name="repeat">repeat</string>
    <string name="image_preview">Image Preview</string>
    <string name="nama">Nama</string>
    <string name="nama_dummy">Saya bin Kamu</string>
    <string name="nik_dummy">1234567890123456</string>
    <string name="nik">NIK</string>
    <string name="tempat">Tempat Lahir</string>
    <string name="tanggal">Tanggal Lahir</string>
    <string name="tempat_dummy">Bandar Saya Besar</string>
    <string name="tanggal_dummy">12–09–1990</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="jk_dummy">Laki - Laki</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_dummy">Rumah</string>
    <string name="rt">RT / RW</string>
    <string name="pdf_rt">RT</string>
    <string name="pdf_rw">RW</string>
    <string name="rt_dummy">01 / 02</string>
    <string name="kel">Kel / Desa</string>
    <string name="kel_dummy">Sukasuka</string>
    <string name="kec">Kecamatan</string>
    <string name="kec_dummy">Sini</string>
    <string name="agama">Agama</string>
    <string name="agama_dummy">Animisme</string>
    <string name="status">Status</string>
    <string name="status_dummy">Lajang</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="pekerjaan_dummy">Pengangguran</string>
    <string name="kw">Kewarganegaraan</string>
    <string name="or">%1$s / %2$s</string>
    <string name="kw_dummy">Sunda Empire</string>
    <string name="button_down">Unduh File</string>
    <string name="created_by">CREATED BY:</string>
    <string name="no_data">Tidak Ada Data</string>
    <string name="surat1">SK Domisili </string>
    <string name="surat2">SK Tidak Mampu</string>
    <string name="surat3">SK Belum Menikah</string>
    <string name="surat4">SK Berkelakuan Baik</string>
    <string name="surat5">Surat Keterangan Usaha</string>
    <string name="invalid_permission">Tidak Dapat Menyalakan NFC</string>
    <string name="title">Tukang</string>
    <string name="logo_kabupaten">logo kabupaten</string>
    <string name="nama_kab">PEMERINTAH KABUPATEN NGANJUK</string>
    <string name="nama_kec">KECAMATAN JATIKALEN</string>
    <string name="nama_desa">DESA NGASEM</string>
    <string name="alamat_desa">Jl. Raya Ngasem No. 13, Kode Pos 64392</string>
    <string name="strip">____________________________________</string>
    <string name="surat_keterangan">SURAT KETERANGAN</string>
    <string name="surat_keterangan_tm">SURAT KETERANGAN TIDAK MAMPU</string>
    <string name="no_surat1">No.460/........................................../2023</string>
    <string name="no_surat2">No.471/........................................../2023</string>
    <string name="isi_keterangan1">      Yang bertanda tangan dibawah ini Kepala Desa Ngasem, \nKecamatan Jatikalen, Kabupaten Nganjuk, menerangkan sbb:</string>
    <string name="isi_keterangan2">      Demikian surat keterangan ini dibuat dan dapat dipergunakan \nsebagaimana mestinya.</string>
    <string name="isi_keterangan3">      Demikian surat keterangan ini dibuat dan dapat dipergunakan \nsebagai syarat dalam pengurusan SKCK.</string>
    <string name="ttl">Tempat, Tgl Lahir</string>
    <string name="mid">:</string>
    <string name="keterangan">Keterangan</string>
    <string name="data_ket1">Tersebut diatas benar-benar penduduk \nDesa Ngasem, Kecamatan Jatikalen, \nKabupaten Nganjuk.</string>
    <string name="data_ket2">Tersebut diatas benar-benar penduduk \nDesa Ngasem, Kecamatan Jatikalen, \nKabupaten Nganjuk, dan benar-benar \ndalam keadaan sosial ekonominya miskin.</string>
    <string name="data_ket3">Yang bersangkutan adalah benar-benar \npenduduk Desa Ngasem, Kecamatan \nJatikalen, Kabupaten Nganjuk, dan \nsampai saat ini belum pernah menikah.</string>
    <string name="data_ket4">Tersebut diatas benar-benar penduduk \nDesa Ngasem, Kecamatan Jatikalen, \nKabupaten Nganjuk, dan berdasarkan \npengamatan kami, yang bersangkutan \nberkelakuan baik di masyarakat.</string>
    <string name="ket_2">Ngasem, ....................</string>
    <string name="kades">Kepala Desa,</string>
    <string name="ttd">.......................</string>
    <string name="ybs">Yang Bersangkutan</string>
    <string name="history">Riwayat</string>
    <string name="select">Pilih Surat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request">Ajukan Surat</string>
    <string name="requestDate">Tanggal Pengajuan</string>
    <string name="doneDate">Tanggal Selesai</string>
    <string name="keperluan">Keperluan</string>
    <string name="id_pengajuan">ID Pengajuan</string>
    <string name="no_surat">No. Surat</string>
    <string name="kosong">-</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="person_history">Riwayat Pribadi</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa Sandi?</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile\n</string>
    <string name="avatar">Avatar\n</string>
    <string name="user_fullName">Nama Lengkap</string>
    <string name="test">Test</string>
    <string name="surveyDate">Waktu Survey</string>
    <string name="uraian">Uraikan masalah anda...</string>
    <string name="register">Register</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="location">Location</string>
</resources>