<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dicoding.android.lakon.MainActivity">
    <item
        android:id="@+id/action_surat1"
        android:orderInCategory="100"
        android:title="@string/surat1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_surat2"
        android:orderInCategory="100"
        android:title="@string/surat2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_surat3"
        android:orderInCategory="100"
        android:title="@string/surat3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_surat4"
        android:orderInCategory="100"
        android:title="@string/surat4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_surat5"
        android:orderInCategory="100"
        android:title="@string/surat5"
        app:showAsAction="never" />
</menu>