<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SplashActivity"
    android:backgroundTint="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.SplashActivity"
        android:backgroundTint="?attr/colorPrimary">

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/back_up"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/welcome" />

        <ImageView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/back_down"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/welcome" />

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/greeting"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@+id/icon"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/core_rhino_medium"
            android:text="@string/app_name"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/icon"
            app:layout_constraintStart_toEndOf="@+id/icon"
            app:layout_constraintTop_toTopOf="@+id/icon" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="290dp"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/perintah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/perintah"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>